--- a/web/index.html
+++ b/web/index.html
@@ -23,7 +23,7 @@
         </div>
       </nav>
 
-      <div class="row">
+      <div class="row" id="catalog" style="display:none;">
         <div class="col-2 sidenav">
           <h2>Categories</h2>
           <nav class="nav flex-column nav-pills" prop="categories">
@@ -44,7 +44,17 @@
             </ul>
           </nav>
         </div>
+      </div><!-- catalog -->
+
+      <div class="row" id="about" style="display:none;">
       </div>
+
+      <div class="row" id="api" style="">
+	<redoc spec-url="openapi.yaml"></redoc>
+        <script src="https://cdn.jsdelivr.net/npm/redoc/bundles/redoc.standalone.js"> </script>
+
+      </div>
+
     </div><!-- / container -->
     <script src="/index.js"></script>
   </body>
