--- a/web/index.html
+++ b/web/index.html
@@ -17,7 +17,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
+              <a class="nav-link" href="/#about">About</a>
+            </li>
+	    <li class="nav-item">
+              <a class="nav-link" href="/#api">API</a>
             </li>
           </ul>
         </div>
@@ -46,16 +49,18 @@
         </div>
       </div><!-- catalog -->
 
-      <div class="row" id="about" style="display:none;">
+      <div class="row" id="about" style="">
       </div>
 
-      <div class="row" id="api" style="">
-	<redoc spec-url="openapi.yaml"></redoc>
-        <script src="https://cdn.jsdelivr.net/npm/redoc/bundles/redoc.standalone.js"> </script>
-
+      <div class="row" id="api" style="display:none">
+        <redoc spec-url="openapi.yaml"></redoc>
       </div>
 
     </div><!-- / container -->
+
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="/index.js"></script>
   </body>
 </html>
