--- a/web/index.html
+++ b/web/index.html
@@ -45,8 +45,29 @@
         </div>
       </div><!-- catalog -->
 
-      <div class="row col" id="about_page" style="display:none;">
+      <div id="about_page" style="display:none;">
         <h2>About</h2>
+
+        <p>This is on-line catalog for
+          <a href="https://github.com/ondratu/m-bitbeam">m-bitbeam</a> library.
+        </p>
+
+        <h3>Donation</h3>
+        <p>If you like this project, and you want to donate it, plese do it
+          by this button
+          <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+            <input type="hidden" name="cmd" value="_donations" />
+            <input type="hidden" name="business" value="mcbig@zeropage.cz" />
+            <input type="hidden" name="currency_code" value="USD" />
+            <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+            <img alt="" border="0" src="https://www.paypal.com/en_CZ/i/scr/pixel.gif" width="1" height="1" />
+          </form>
+          </p>
+
+        <h3>Contact</h3>
+        <p>Source code of this calaog is on
+          <a href="https://github.com/ondratu/m-bitbeam-catalog">Github</a> too,
+          so you can creete some issue if you want.</p>
       </div>
 
       <div class="row" id="api_page" style="display:none;">
