--- a/web/index.html
+++ b/web/index.html
@@ -19,7 +19,7 @@
             <li class="nav-item">
               <a class="nav-link" page="about" href="/#about">About</a>
             </li>
-	    <li class="nav-item">
+            <li class="nav-item">
               <a class="nav-link" page="api" href="/#api">API</a>
             </li>
           </ul>
@@ -49,7 +49,7 @@
         <h2>About</h2>
 
         <p>This is on-line catalog for
-          <a href="https://github.com/ondratu/m-bitbeam">m-bitbeam</a> library.
+          <a href="https://github.com/m-Bitbeam/m-bitbeam">m-bitbeam</a> library.
         </p>
 
         <h3>Donation</h3>
@@ -66,7 +66,7 @@
 
         <h3>Contact</h3>
         <p>Source code of this calaog is on
-          <a href="https://github.com/ondratu/m-bitbeam-catalog">Github</a> too,
+          <a href="https://github.com/m-Bitbeam/m-bitbeam-catalog">Github</a> too,
           so you can creete some issue if you want.</p>
       </div>
 
