--- a/web/index.html
+++ b/web/index.html
@@ -20,6 +20,12 @@
               <a class="nav-link" page="about" href="/#about">About</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="">Download</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="">Donate</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" page="api" href="/#api">API</a>
             </li>
           </ul>
@@ -63,6 +69,13 @@
             <img alt="" border="0" src="https://www.paypal.com/en_CZ/i/scr/pixel.gif" width="1" height="1" />
           </form>
           </p>
+
+        <h3>Links</h3>
+        <ul>
+          <li>Github <a href="https://github.com/m-Bitbeam/m-bitbeam">repository</a>
+            of parts.</li>
+          <li></li>
+        </ul>
 
         <h3>Contact</h3>
         <p>Source code of this calaog is on
