--- a/web/index.html
+++ b/web/index.html
@@ -1,5 +1,7 @@
+<!DOCTYPE html>
 <html>
   <head>
+    <!-- needed for mobile devices -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
 
@@ -7,9 +9,10 @@
     <link href="/custom.css" rel="stylesheet">
   </head>
   <body>
-    <div class="container-fluid">
-      <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <a class="navbar-brand" page="catalog" href="/#"><big>m-BITBEAM Catalog</big></a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+      <div class="container">
+
+        <a class="navbar-brand" page="catalog" href="/#"><big>m-BITBEAM</big></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="true" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -17,24 +20,25 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
+              <a class="nav-link" page="about" href="/#catalog">Catalog</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" page="about" href="/#about">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="">Download</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Donate</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" page="api" href="/#api">API</a>
+              <a class="nav-link" page="api" href="/api">API</a>
             </li>
           </ul>
         </div>
-      </nav>
+      </div><!-- container -->
+    </nav>
 
+    <div class="container">
       <div class="row" id="catalog_page" style="display: none;">
         <div class="col-2 sidenav">
-          <h2>Categories</h2>
           <nav class="nav flex-column nav-pills" prop="categories">
           </nav>
         </div>
